# snowflake-ingest-java

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  deps.bzl
src/main/java/net/snowflake/ingest/streaming/: SnowflakeStreamingIngestChannel.java
src/main/java/net/snowflake/ingest/streaming/internal/: ChannelCache.java  ChannelRuntimeState.java  FlushService.java  SnowflakeStreamingIngestChannelInternal.java  SnowflakeStreamingIngestClientInternal.java
src/test/java/net/snowflake/ingest/streaming/internal/: FlushServiceTest.java  IcebergParquetValueParserTest.java  InsertRowsBenchmarkTest.java  RowBufferTest.java  SnowflakeStreamingIngestChannelTest.java
src/test/java/net/snowflake/ingest/streaming/internal/datatypes/: IcebergLogicalTypesIT.java  IcebergStructuredIT.java
src/test/java/net/snowflake/ingest/streaming/internal/it/: IcebergBigFilesIT.java  IcebergSchemaEvolutionIT.java
