load("deps.bzl", "make_all_unit_tests")

java_library(
    name = "observe_snowflake_ingest_sdk",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@snowpipe_maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@snowpipe_maven//:com_fasterxml_jackson_core_jackson_core",
        "@snowpipe_maven//:com_fasterxml_jackson_core_jackson_databind",
        "@snowpipe_maven//:com_fasterxml_woodstox_woodstox_core",
        "@snowpipe_maven//:com_github_ben_manes_caffeine_caffeine",
        "@snowpipe_maven//:com_github_stephenc_jcip_jcip_annotations",
        "@snowpipe_maven//:com_google_code_findbugs_jsr305",
        "@snowpipe_maven//:com_google_code_gson_gson",
        "@snowpipe_maven//:com_google_errorprone_error_prone_annotations",
        "@snowpipe_maven//:com_google_guava_failureaccess",
        "@snowpipe_maven//:com_google_guava_guava",
        "@snowpipe_maven//:com_google_guava_listenablefuture",
        "@snowpipe_maven//:com_google_j2objc_j2objc_annotations",
        "@snowpipe_maven//:com_google_protobuf_protobuf_java",
        "@snowpipe_maven//:com_google_re2j_re2j",
        "@snowpipe_maven//:com_nimbusds_nimbus_jose_jwt",
        "@snowpipe_maven//:commons_beanutils_commons_beanutils",
        "@snowpipe_maven//:commons_cli_commons_cli",
        "@snowpipe_maven//:commons_codec_commons_codec",
        "@snowpipe_maven//:commons_collections_commons_collections",
        "@snowpipe_maven//:commons_io_commons_io",
        "@snowpipe_maven//:commons_net_commons_net",
        "@snowpipe_maven//:commons_pool_commons_pool",
        "@snowpipe_maven//:io_airlift_aircompressor",
        "@snowpipe_maven//:io_dropwizard_metrics_metrics_core",
        "@snowpipe_maven//:io_dropwizard_metrics_metrics_jmx",
        "@snowpipe_maven//:io_dropwizard_metrics_metrics_jvm",
        "@snowpipe_maven//:io_netty_netty_common",
        "@snowpipe_maven//:jakarta_activation_jakarta_activation_api",
        "@snowpipe_maven//:net_bytebuddy_byte_buddy",
        "@snowpipe_maven//:net_bytebuddy_byte_buddy_agent",
        "@snowpipe_maven//:net_snowflake_snowflake_jdbc",
        "@snowpipe_maven//:org_apache_commons_commons_compress",
        "@snowpipe_maven//:org_apache_commons_commons_configuration2",
        "@snowpipe_maven//:org_apache_commons_commons_lang3",
        "@snowpipe_maven//:org_apache_commons_commons_math3",
        "@snowpipe_maven//:org_apache_commons_commons_text",
        "@snowpipe_maven//:org_apache_hadoop_hadoop_annotations",
        "@snowpipe_maven//:org_apache_hadoop_hadoop_common",
        "@snowpipe_maven//:org_apache_hadoop_thirdparty_hadoop_shaded_guava",
        "@snowpipe_maven//:org_apache_hadoop_thirdparty_hadoop_shaded_protobuf_3_7",
        "@snowpipe_maven//:org_apache_parquet_parquet_column",
        "@snowpipe_maven//:org_apache_parquet_parquet_common",
        "@snowpipe_maven//:org_apache_parquet_parquet_encoding",
        "@snowpipe_maven//:org_apache_parquet_parquet_format_structures",
        "@snowpipe_maven//:org_apache_parquet_parquet_hadoop",
        "@snowpipe_maven//:org_apache_parquet_parquet_jackson",
        "@snowpipe_maven//:org_apache_yetus_audience_annotations",
        "@snowpipe_maven//:org_bouncycastle_bcpkix_jdk18on",
        "@snowpipe_maven//:org_bouncycastle_bcprov_jdk18on",
        "@snowpipe_maven//:org_bouncycastle_bcutil_jdk18on",
        "@snowpipe_maven//:org_checkerframework_checker_qual",
        "@snowpipe_maven//:org_codehaus_woodstox_stax2_api",
        "@snowpipe_maven//:org_hamcrest_hamcrest_core",
        "@snowpipe_maven//:org_javassist_javassist",
        "@snowpipe_maven//:org_objenesis_objenesis",
        "@snowpipe_maven//:org_slf4j_slf4j_api",
    ],
)

make_all_unit_tests(
    srcs = glob(["src/test/java/**/*.java"]),
    excludes = [
        "AbstractDataTypeTest", # not an actual test - used as base class for integration tests
        "UserAgentTest", # fails due to version string mismatch
    ],
    resources = glob(["src/test/resources/**"]),
    runtime_deps = [
        "@snowpipe_maven//:net_snowflake_snowflake_jdbc",
    ],
    deps = [
        ":observe_snowflake_ingest_sdk",
        "@snowpipe_maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@snowpipe_maven//:com_fasterxml_jackson_core_jackson_core",
        "@snowpipe_maven//:com_fasterxml_jackson_core_jackson_databind",
        "@snowpipe_maven//:commons_beanutils_commons_beanutils",
        "@snowpipe_maven//:commons_cli_commons_cli",
        "@snowpipe_maven//:commons_codec_commons_codec",
        "@snowpipe_maven//:commons_collections_commons_collections",
        "@snowpipe_maven//:commons_io_commons_io",
        "@snowpipe_maven//:commons_net_commons_net",
        "@snowpipe_maven//:commons_pool_commons_pool",
        "@snowpipe_maven//:io_dropwizard_metrics_metrics_core",
        "@snowpipe_maven//:io_dropwizard_metrics_metrics_jmx",
        "@snowpipe_maven//:io_dropwizard_metrics_metrics_jvm",
        "@snowpipe_maven//:junit_junit",
        "@snowpipe_maven//:net_snowflake_snowflake_jdbc",
        "@snowpipe_maven//:org_apache_commons_commons_compress",
        "@snowpipe_maven//:org_apache_commons_commons_configuration2",
        "@snowpipe_maven//:org_apache_commons_commons_lang3",
        "@snowpipe_maven//:org_apache_commons_commons_math3",
        "@snowpipe_maven//:org_apache_commons_commons_text",
        "@snowpipe_maven//:org_apache_parquet_parquet_column",
        "@snowpipe_maven//:org_apache_parquet_parquet_common",
        "@snowpipe_maven//:org_apache_parquet_parquet_encoding",
        "@snowpipe_maven//:org_apache_parquet_parquet_format_structures",
        "@snowpipe_maven//:org_apache_parquet_parquet_hadoop",
        "@snowpipe_maven//:org_apache_parquet_parquet_jackson",
        "@snowpipe_maven//:org_bouncycastle_bcpkix_jdk18on",
        "@snowpipe_maven//:org_bouncycastle_bcprov_jdk18on",
        "@snowpipe_maven//:org_bouncycastle_bcutil_jdk18on",
        "@snowpipe_maven//:org_hamcrest_hamcrest_core",
        "@snowpipe_maven//:org_mockito_mockito_core",
        "@snowpipe_maven//:org_powermock_powermock_api_mockito2",
        "@snowpipe_maven//:org_powermock_powermock_api_support",
        "@snowpipe_maven//:org_powermock_powermock_core",
        "@snowpipe_maven//:org_powermock_powermock_module_junit4",
        "@snowpipe_maven//:org_powermock_powermock_module_junit4_common",
        "@snowpipe_maven//:org_powermock_powermock_reflect",
        "@snowpipe_maven//:org_slf4j_slf4j_simple",
        "@snowpipe_maven//:com_github_luben_zstd_jni",
    ],
)
